--- a/modules/1.md
+++ b/modules/1.md
@@ -6,60 +6,73 @@
 
 # 1.1 NON POSITIONAL NUMBER SYSTEM
 
-- Digits in a non-positional number system have a same value regardless of their position.
+- Digits in a non-positional number system have a same value regardless of their
+  position.
 - An example is Roman Numeral System.
 - The digits used in this number system and their values are:
 
-| DECIMAL | $1$ | $5$ | $10$ | $50$ | $100$ | $500$ | $1000$ | 
-|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|
-| ROMAN | $I$ | $V$ | $X$ | $L$ | $C$ | $D$ | $M$ |
+| DECIMAL | $1$ | $5$ | $10$ | $50$ | $100$ | $500$ | $1000$ |
+| :-----: | :-: | :-: | :--: | :--: | :---: | :---: | :----: |
+|  ROMAN  | $I$ | $V$ | $X$  | $L$  |  $C$  |  $D$  |  $M$   |
 
 - The following rules are satisfied when writing and reading roman numerals:
 
-1. Two or three same digits (from $I, X, C, M$) in a row represent the sum of their individual value.
-   - $II = 2$ 
-   - $CCC=300$ 
-   - $MMM=3000$
-2. Two digits where the smaller one is in front of the bigger represent their difference.
-   - $IV = 4$ 
-   - $IX = 9$ 
-   - $XL=40$
-3. Two digits where the smaller one is after the bigger represent their sum.
-   - $VI = 6$ 
-   - $XI = 11$ 
-   - $LV=55$
-4. There can only be put one smaller digit (from $I, X, C$) in front of a bigger; the smaller letter can be one fifth $(1/5)$ or one tenth $(1/10)$ of the larger one;
-   - $99$ cannot be $IC$ as $I$ is one hundredth part of $C$.
-   - Instead, $99 = XCIX$.
-5. There can be $1, 2$ or $3$ same digits that are smaller written after a bigger digit, in which case their value will be added together and added again to the bigger digit.
-   - There can only be $CM=900$, but there can be $MCCC=1300$.
-6. There cannot be more than one digit written together from the second row of digits above $(V, L, D)$.
+1. Two or three same digits (from $I, X, C, M$) in a row represent the sum of
+   their individual value.
+- $II = 2$
+- $CCC=300$
+- $MMM=3000$
 
+2. Two digits where the smaller one is in front of the bigger represent their
+   difference.
+- $IV = 4$
+- $IX = 9$
+- $XL=40$
+
+3. Two digits where the smaller one is after the bigger represent their sum.
+- $VI = 6$
+- $XI = 11$
+- $LV=55$
+
+4. There can only be put one smaller digit (from $I, X, C$) in front of a
+   bigger; the smaller letter can be one fifth $(1/5)$ or one tenth $(1/10)$ of
+   the larger one;
+- $99$ cannot be $IC$ as $I$ is one hundredth part of $C$.
+- Instead, $99 = XCIX$.
+
+5. There can be $1, 2$ or $3$ same digits that are smaller written after a
+   bigger digit, in which case their value will be added together and added
+   again to the bigger digit.
+- There can only be $CM=900$, but there can be $MCCC=1300$.
+
+6. There cannot be more than one digit written together from the second row of
+   digits above $(V, L, D)$.
 - Within the roman numerals there is no representation of $0 (zero)$.
-- It will be very difficult to perform arithmetic operations within this system, as well as writing larger numbers.
+- It will be very difficult to perform arithmetic operations within this system,
+  as well as writing larger numbers.
 
 ## Example 1: Write the following numbers with roman numerals:
 
-| DECIMAL   | ROMAN     |
-|----------:|:----------|
-| $27$ | $XXVII$ |
-| $54$ | $LIV$ |
-| $87$ | $LXXXVII$ |
-| $369$ | $CCCLXIX$ |
-| $1639$ | $MDCXXXIX$ |
-| $2409$ | $MMCDIX$ |
-| $3744$ | $MMMDCCXLIV$ |
-| $4839$ | $\text{n/a}$ |
+| DECIMAL | ROMAN        |
+| ------- | :----------- |
+| $27$    | $XXVII$      |
+| $54$    | $LIV$        |
+| $87$    | $LXXXVII$    |
+| $369$   | $CCCLXIX$    |
+| $1639$  | $MDCXXXIX$   |
+| $2409$  | $MMCDIX$     |
+| $3744$  | $MMMDCCXLIV$ |
+| $4839$  | $\text{n/a}$ |
 
 ## Example 2: Write the following numerals in decimal form:
 
-| ROMAL     | DECIMAL   |
-|----------:|:----------|
-| $XLII$ | $42$ |
-| $MI$ | $1001$ |
-| $CCXVIII$ | $218$ |
-| $DIV$ | $504$ |
-| $CMXXVI$ | $926$ |
-| $MMCDXLIV$ | $2444$ |
-| $MMMCDVIII$ | $3408$ |
-| $MDCLXVI$ | $1666$ |
+| ROMAL       | DECIMAL |
+| ----------- | :------ |
+| $XLII$      | $42$    |
+| $MI$        | $1001$  |
+| $CCXVIII$   | $218$   |
+| $DIV$       | $504$   |
+| $CMXXVI$    | $926$   |
+| $MMCDXLIV$  | $2444$  |
+| $MMMCDVIII$ | $3408$  |
+| $MDCLXVI$   | $1666$  |
