--- a/modules/3.md
+++ b/modules/3.md
@@ -14,77 +14,45 @@
 
 # 1.3 BINARY NUMBER SYSTEM
 
-- A number system with a base (radix) $2$ is called __Binary Number System__ and uses
-  only two digits $0$ and $1$.
+- A number system with a base (radix) $2$ is called **Binary Number System** and
+  uses only two digits $0$ and $1$.
 - Our computers are based on this system due to the easiness of performing
   operations.
 - When the number is given in a binary number system, every place of the digits
   represents a power of $2$.
 - $\cdots, 2^3, 2^2, 2^1, { \color{pink} 2^0 }, 2^{-1}, 2^{-2}, 2^{-3}, \cdots$
-- For Example, $\\ 11011_{(2)}; \\ 1000111011_{(2)}; \\ 101000.10101_{(2)}$
+- For Example,
+
+```math
+11011_{(2)}; \\
+1000111011_{(2)}; \\
+101000.10101_{(2)}
+```
 
 ### Example 1: Count in binary number system as indicated:
 
 1. From $1_{(2)}$ To $101_{(2)}$
+- ${\color{green}1; 10; 11; 100; 101}$
 
-- $1_{(2)};$
-  <input type="number" style="background-color:#0F1217;color:white;" style="background-color:#0F1217;color:white;">;
-  <input type="number" style="background-color:#0F1217;color:white;">;
-  <input type="number" style="background-color:#0F1217;color:white;">;
-  $101_{(2)}$
-  <details>
-    <summary style="color: green;">See Answer Q1</summary>
-    <h3>
-
-  ${ \color{green} 10; 11; 100; }$
-  </h3>
-    </details>
-    <hr />
+---
 
 2. From $101_{(2)}$ To $1011_{(2)}$
+- ${\color{green}101; 110; 111; 1000; 1001; 1010; 1011}$
 
-- $101_{(2)};$
-  <input type="number" style="background-color:#0F1217;color:white;">;
-  <input type="number" style="background-color:#0F1217;color:white;">;
-  <input type="number" style="background-color:#0F1217;color:white;">;
-  <input type="number" style="background-color:#0F1217;color:white;">;
-  <input type="number" style="background-color:#0F1217;color:white;">;
-  $1011_{(2)}$
-  <details>
-    <summary style="color: green;">See Answer Q2</summary>
-    <h3>
-
-  ${ \color{green} 110; 111; 1000; 1001; 1010; }$
-  </h3>
-    </details>
-    <hr />
+---
 
 3. From $101101_{(2)}$ To $110100_{(2)}$
+- ${\color{green}101101; 101110; 101111; 110000; 110001; 110010; 110011; 110100}$
 
-- $101101_{(2)};$
-  <input type="number" style="background-color:#0F1217;color:white;">;
-  <input type="number" style="background-color:#0F1217;color:white;">;
-  <input type="number" style="background-color:#0F1217;color:white;">;
-  <input type="number" style="background-color:#0F1217;color:white;">;
-  <input type="number" style="background-color:#0F1217;color:white;">;
-  <input type="number" style="background-color:#0F1217;color:white;">;
-  $110100_{(2)}$
-  <details>
-    <summary style="color: green;">See Answer Q2</summary>
-    <h3>
-
-  ${ \color{green} 101110; 101111; 110000; 110001; 110010; 110011; }$
-  </h3>
-    </details>
-    <hr />
+---
 
 ## 1.3.1 CONVERTING FROM BINARY TO DECIMAL NUMBER SYSTEM
 
 ### Method 1:
 
 - The digit positions to the left of the binary point represent $2^0, 2^1, 2^2,
-  2^3, \cdots$ (going backwards) and the digit positions $s$ to the right of
-  the binary point represent $2^{-1}, 2^{-2}, 2^{-3}$
+  2^3, \cdots$ (going backwards) and the digit positions $s$ to the right of the
+  binary point represent $2^{-1}, 2^{-2}, 2^{-3}$
 - These positional values which are based on powers of $2$ are then evaluated
   (as in the Decimal Number System) to obtain the equivalent decimal number.
 - For example, $\\ 110010_{(2)} \to \\ = 1(2^5) + 1(2^4) + 0(2^3) + 0(2^2) +
@@ -96,27 +64,31 @@
 1. $10101_{(2)} \to \\ = 1(2^4) + 0(2^3) + 1(2^2) + 0(2^1) + 1(2^0) \\ = {
    \color{gray} 2^4 + 0 + 2^2 + 0 + 2^0 } \\ = 2^4 + 2^2 + 2^0 \\ = {
    \color{green} 16 + 4 + 1 } \\ = { \color{lightgreen} 21_{(10)} }$
-   <hr />
+
+---
 
 2. $11000111011_{(2)} \to \\ = 1(2^10) + 1(2^9) + 0(2^8) + 0(2^7) + 0(2^6) +
    1(2^5) + 1(2^4) + 1(2^3) + 0(2^2) + 1(2^1) + 1(2^0) \\ = { \color{gray}
    2^{10} + 2^9 + 0 + 0 + 0 + 2^5 + 2^4 + 2^3 + 0 + 2^1 + 2^0 } \\ = 2^{10} +
    2^9 + 2^5 + 2^4 + 2^3 + 2^1 + 2^0 \\ = { \color{green} 1024 + 512 + 32 + 16 +
    8 + 2 + 1 } \\ = { \color{lightgreen} 1595_{(10)} }$
-   <hr />
+
+---
 
 3. $1010.1001_{(2)} \to \\ = 1(2^3) + 0(2^2) + 1(2^1) + 1(2^0) + 1(2^{-1}) +
    0(2^{-2}) + 0(2^{-3}) + 1(2^{-4}) \\ = { \color{gray} 2^3 + 2^1 + 2^0 +
    2^{-1} + 2^{-4} } \\ = { \color{green} 8 + 2 + 0.5 + 0.0625 } \\ = {
    \color{lightgreen} 10.5625_{(10)} }$
-   <hr />
+
+---
 
 4. $1101011.10101_{(2)} \to \\ = 1(2^6) + 1(2^5) + 0(2^4) + 1(2^3) + 0(2^2) +
    1(2^1) + 1(2^0) + 1(2^{-1}) + 0(2^{-2}) + 1(2^{-3}) + 0(2^{-4}) + 1(2^{-5})
    \\ = { \color{gray} 2^6 + 2^5 + 2^3 + 2^1 + 2^0 + 2^{-1} + 2^{-3} + 2^{-5} }
    \\ = { \color{green} 64 + 32 + 8 + 2 + 1 + 0.5 + 0.125 + 0.03125 } \\ = {
    \color{lightgreen} 107.65625_{(10)} }$
-   <hr />
+
+---
 
 ### Method 2:
 
@@ -131,7 +103,6 @@
   \end{array}} { \cfrac{\begin{array}{r} 26 + 0 = 26 \\ \times 2 \end{array}} {
   \begin{array}{r} 52 + 1 = { \color{green} 53 } \end{array} } } } } }
   \end{equation}$
-
 - If the binary number contains a fractional part, the procedure is the same
   except that we start from the rightmost digit dividing by 2 and progress to
   the left.
@@ -230,8 +201,8 @@
   the first remainder will be the right most digit (least significant digit -
   LSD) and the last remainder will be the left most digit (most significant
   digit - MSD).
-- For example, to convert $53_{(10)}$ to its binary equivalent we have: $\\
-  53|{ \color{green} 1 } \to 53 \div 2 = 26; \; rem = { \color{green} 1 };
+- For example, to convert $53_{(10)}$ to its binary equivalent we have: $\\ 53|{
+  \color{green} 1 } \to 53 \div 2 = 26; \; rem = { \color{green} 1 };
   LSD\text{(most left digit)} \\ 26|{ \color{green} 0 } \to 26 \div 2 = 13; \;
   rem = { \color{green} 0 } \\ 13|{ \color{green} 1 } \to 13 \div 2 = \;\;6; \;
   rem = { \color{green} 1 } \\ \;\;6|{ \color{green} 0 } \to \;\;6 \div 2 =
@@ -304,25 +275,24 @@
    <details>
     <summary style="color: green;">See Answer Q2</summary>
 
-   $\\ 6712|{ \color{green} 0 } \to 6712 \div 2 = 3356; \; rem = {
-   \color{green} 0 }; LSD\text{(most left digit)} \\ 3356|{ \color{green} 0 }
-   \to 3356 \div 2 = 1678; \; rem = { \color{green} 0 } \\ 1678|{ \color{green}
-   0 } \to 1678 \div 2 = \;\;839; \; rem = { \color{green} 0 } \\ \;\;839|{
-   \color{green} 1 } \to \;\;839 \div 2 = \;\;419; \; rem = { \color{green} 1 }
-   \\ \;\;419|{ \color{green} 1 } \to \;\;419 \div 2 = \;\;209; \; rem = {
-   \color{green} 0 } \\ \;\;209|{ \color{green} 1 } \to \;\;209 \div 2 =
-   \;\;104; \; rem = { \color{green} 1 } \\ \;\;104|{ \color{green} 0 } \to
-   \;\;104 \div 2 = \;\;\;\;52; \; rem = { \color{green} 0 } \\ \;\;\;52|{
-   \color{green} 0 } \to \;\;\;\;\;52 \div 2 = \;\;\;\;26; \; rem = {
-   \color{green} 0 } \\ \;\;\;26|{ \color{green} 0 } \to \;\;\;\;\;26 \div 2 =
-   \;\;\;\;13; \; rem = { \color{green} 0 } \\ \;\;\;13|{ \color{green} 1 } \to
-   \;\;\;\;\;13 \div 2 = \;\;\;\;\;\;6; \; rem = { \color{green} 1 } \\
-   \;\;\;\;\;6|{ \color{green} 0 } \to \;\;\;\;\;\;\;6 \div 2 = \;\;\;\;\;\;3;
-   \; rem = { \color{green} 0 } \\ \;\;\;\;\;3|{ \color{green} 1 } \to
-   \;\;\;\;\;\;\;3 \div 2 = \;\;\;\;\;\;1; \; rem = { \color{green} 1 } \\
-   \;\;\;\;\;1|{ \color{green} 1 } \to \;\;\;\;\;\;\;1 \div 2 =
-   \;\;\;\;\;\;\equiv; \; rem = { \color{green} 1 }; MSD\text{(most right
-   digit)} \\$
+   $\\ 6712|{ \color{green} 0 } \to 6712 \div 2 = 3356; \; rem = { \color{green}
+   0 }; LSD\text{(most left digit)} \\ 3356|{ \color{green} 0 } \to 3356 \div 2
+   = 1678; \; rem = { \color{green} 0 } \\ 1678|{ \color{green} 0 } \to 1678
+   \div 2 = \;\;839; \; rem = { \color{green} 0 } \\ \;\;839|{ \color{green} 1 }
+   \to \;\;839 \div 2 = \;\;419; \; rem = { \color{green} 1 } \\ \;\;419|{
+   \color{green} 1 } \to \;\;419 \div 2 = \;\;209; \; rem = { \color{green} 0 }
+   \\ \;\;209|{ \color{green} 1 } \to \;\;209 \div 2 = \;\;104; \; rem = {
+   \color{green} 1 } \\ \;\;104|{ \color{green} 0 } \to \;\;104 \div 2 =
+   \;\;\;\;52; \; rem = { \color{green} 0 } \\ \;\;\;52|{ \color{green} 0 } \to
+   \;\;\;\;\;52 \div 2 = \;\;\;\;26; \; rem = { \color{green} 0 } \\ \;\;\;26|{
+   \color{green} 0 } \to \;\;\;\;\;26 \div 2 = \;\;\;\;13; \; rem = {
+   \color{green} 0 } \\ \;\;\;13|{ \color{green} 1 } \to \;\;\;\;\;13 \div 2 =
+   \;\;\;\;\;\;6; \; rem = { \color{green} 1 } \\ \;\;\;\;\;6|{ \color{green} 0
+   } \to \;\;\;\;\;\;\;6 \div 2 = \;\;\;\;\;\;3; \; rem = { \color{green} 0 } \\
+   \;\;\;\;\;3|{ \color{green} 1 } \to \;\;\;\;\;\;\;3 \div 2 = \;\;\;\;\;\;1;
+   \; rem = { \color{green} 1 } \\ \;\;\;\;\;1|{ \color{green} 1 } \to
+   \;\;\;\;\;\;\;1 \div 2 = \;\;\;\;\;\;\equiv; \; rem = { \color{green} 1 };
+   MSD\text{(most right digit)} \\$
    <h3>
 
    $6712_{(10)} = { \color{green} 1101000111000_{(2)} }$
@@ -434,25 +404,25 @@
    <details>
     <summary style="color: green;">See Answer Q7</summary>
 
-   $\\ 5279|{ \color{green} 1 } \to 5279 \div 2 = 2639; \; rem = {
-   \color{green} 1 }; LSD\text{(most left digit)} \\ 2639|{ \color{green} 1 }
-   \to 2639 \div 2 = 1319; \; rem = { \color{green} 1 } \\ 1319|{ \color{green}
-   1 } \to 1319 \div 2 = \;\;659; \; rem = { \color{green} 1 } \\ \;\;659|{
-   \color{green} 1 } \to \;\;659 \div 2 = \;\;329; \; rem = { \color{green} 1 }
-   \\ \;\;329|{ \color{green} 1 } \to \;\;329 \div 2 = \;\;164; \; rem = {
-   \color{green} 1 } \\ \;\;164|{ \color{green} 0 } \to \;\;164 \div 2 =
-   \;\;\;\;82; \; rem = { \color{green} 0 } \\ \;\;\;\;82|{ \color{green} 0 }
-   \to \;\;\;\;82 \div 2 = \;\;\;\;41; \; rem = { \color{green} 0 } \\
-   \;\;\;\;41|{ \color{green} 1 } \to \;\;\;\;41 \div 2 = \;\;\;\;20; \; rem = {
-   \color{green} 1 } \\ \;\;\;\;20|{ \color{green} 0 } \to \;\;\;\;20 \div 2 =
-   \;\;\;\;10; \; rem = { \color{green} 0 } \\ \;\;\;\;10|{ \color{green} 0 }
-   \to \;\;\;\;10 \div 2 = \;\;\;\;\;\;5; \; rem = { \color{green} 0 } \\
-   \;\;\;\;\;\;5|{ \color{green} 1 } \to \;\;\;\;\;\;5 \div 2 = \;\;\;\;\;\;2;
-   \; rem = { \color{green} 1 } \\ \;\;\;\;\;\;2|{ \color{green} 0 } \to
-   \;\;\;\;\;\;2 \div 2 = \;\;\;\;\;\;1; \; rem = { \color{green} 0 } \\
-   \;\;\;\;\;\;1|{ \color{green} 1 } \to \;\;\;\;\;\;1 \div 2 =
-   \;\;\;\;\;\;\equiv; \; rem = { \color{green} 1 }; MSD\text{(most right
-   digit)} \\ = { 5279 = \color{pink} 1010010011111_{(2)} }$
+   $\\ 5279|{ \color{green} 1 } \to 5279 \div 2 = 2639; \; rem = { \color{green}
+   1 }; LSD\text{(most left digit)} \\ 2639|{ \color{green} 1 } \to 2639 \div 2
+   = 1319; \; rem = { \color{green} 1 } \\ 1319|{ \color{green} 1 } \to 1319
+   \div 2 = \;\;659; \; rem = { \color{green} 1 } \\ \;\;659|{ \color{green} 1 }
+   \to \;\;659 \div 2 = \;\;329; \; rem = { \color{green} 1 } \\ \;\;329|{
+   \color{green} 1 } \to \;\;329 \div 2 = \;\;164; \; rem = { \color{green} 1 }
+   \\ \;\;164|{ \color{green} 0 } \to \;\;164 \div 2 = \;\;\;\;82; \; rem = {
+   \color{green} 0 } \\ \;\;\;\;82|{ \color{green} 0 } \to \;\;\;\;82 \div 2 =
+   \;\;\;\;41; \; rem = { \color{green} 0 } \\ \;\;\;\;41|{ \color{green} 1 }
+   \to \;\;\;\;41 \div 2 = \;\;\;\;20; \; rem = { \color{green} 1 } \\
+   \;\;\;\;20|{ \color{green} 0 } \to \;\;\;\;20 \div 2 = \;\;\;\;10; \; rem = {
+   \color{green} 0 } \\ \;\;\;\;10|{ \color{green} 0 } \to \;\;\;\;10 \div 2 =
+   \;\;\;\;\;\;5; \; rem = { \color{green} 0 } \\ \;\;\;\;\;\;5|{ \color{green}
+   1 } \to \;\;\;\;\;\;5 \div 2 = \;\;\;\;\;\;2; \; rem = { \color{green} 1 } \\
+   \;\;\;\;\;\;2|{ \color{green} 0 } \to \;\;\;\;\;\;2 \div 2 = \;\;\;\;\;\;1;
+   \; rem = { \color{green} 0 } \\ \;\;\;\;\;\;1|{ \color{green} 1 } \to
+   \;\;\;\;\;\;1 \div 2 = \;\;\;\;\;\;\equiv; \; rem = { \color{green} 1 };
+   MSD\text{(most right digit)} \\ = { 5279 = \color{pink} 1010010011111_{(2)}
+   }$
 
    $\\ \;{ \color{green} .}|635 \to 0.635 * 2 = { \color{green} 1 }.270 \\ {
    \color{green} 1 }|270 \to 0.270 * 2 = { \color{green} 0 }.540 \\ {
