--- a/modules/4.md
+++ b/modules/4.md
@@ -12,8 +12,8 @@
 
 # 1.4 OCTAL NUMBER SYSTEM
 
-- A number system with a base (radix) $8$ is called Octal Number System and
-  uses the following digits $0, 1, 2, 3, 4, 5, 6, 7$.
+- A number system with a base (radix) $8$ is called Octal Number System and uses
+  the following digits $0, 1, 2, 3, 4, 5, 6, 7$.
 - When the number is given in an Octal Number System, every place of the digits
   represents a power of $8, (or 23)$.
 - $\cdots, 8^3, 8^2, 8^1, { \color{pink} 8^0 }, 8^{-1}, 8^{-2}, 8^{-3}, \cdots$
@@ -85,8 +85,8 @@
 - The procedure for converting between Octal and Decimal Number System is
   similar to the one converting between Binary and Decimal.
 - The digit positions to the left of the octal point represent, $8^0, 8^1, 8^2,
-  8^3, \cdots$ and the digit positions to the right of the octal point
-  represent $8^{(-1)}, 8^{(-2)}, 8^{(-3)}, \cdots$.
+  8^3, \cdots$ and the digit positions to the right of the octal point represent
+  $8^{(-1)}, 8^{(-2)}, 8^{(-3)}, \cdots$.
 - These positional values based on powers of $8$ are then evaluated (as in the
   Decimal Number System) to obtain the equivalent decimal number.
 - For example, $\\ 753035_{(8)} \to \\ = 7(8^5) + 5(8^4) + 3(8^3) + 0(8^2) +
@@ -161,8 +161,8 @@
    <details>
    <summary style="color: green;">See Answer Q1</summary>
 
-   $234_{(10)} \to \\ 234|{ \color{green} 2 } \to 234 \div 8 = 29.25; \qquad
-   rem = { 0.25 \times 8 = \color{green} 2}; LSD\text{(most left digit)} \\ \;\;
+   $234_{(10)} \to \\ 234|{ \color{green} 2 } \to 234 \div 8 = 29.25; \qquad rem
+   = { 0.25 \times 8 = \color{green} 2}; LSD\text{(most left digit)} \\ \;\;
    29|{ \color{green} 5 } \to \;\; 29 \div 8 = 3.625; \qquad rem = { 0.625
    \times 8 = \color{green} 5 } \\ \quad 3|{ \color{green} 3 } \to \quad 3 \div
    8 = \quad \cdots; \qquad rem = \cdots = { \color{green} 3 }; MSD\text{(most
@@ -235,16 +235,16 @@
    <details>
     <summary style="color: green;">See Answer Q5</summary>
 
-   $4563_{(10)} \to \\ 4563|{ \color{green} 3 } \to 4563 \div 8 = 570.375;
-   \quad rem = { 0.375 \times 8 = \color{green} 3}; LSD \text{(most left digit)}
-   \\ \;\;570|{ \color{green} 2 } \to \;\; 570 \div 8 = 71.25; \qquad rem = {
-   0.25 \times 8 = \color{green} 2 } \\ \quad 71|{ \color{green} 7 } \to \;\;
-   \;\; 71 \div 8 = 8.875; \qquad rem = { 0.875 \times 8 = \color{green} 7 } \\
-   \quad \;\;8|{ \color{green} 0 } \to \;\; \quad 8 \div 8 = 1; \qquad \qquad
-   rem = { 0.0 \times 8 = \color{green} 0 } \\ \quad \;\;1|{ \color{green} 1 }
-   \to \quad\;\; 1 \div 8 = \ \cdots; \quad \qquad rem = \cdots = {
-   \color{green} 1 }; MSD\text{(most right digit)} \\ 4563_{(10)} = {
-   \color{pink} 10723_{(8)} }$
+   $4563_{(10)} \to \\ 4563|{ \color{green} 3 } \to 4563 \div 8 = 570.375; \quad
+   rem = { 0.375 \times 8 = \color{green} 3}; LSD \text{(most left digit)} \\
+   \;\;570|{ \color{green} 2 } \to \;\; 570 \div 8 = 71.25; \qquad rem = { 0.25
+   \times 8 = \color{green} 2 } \\ \quad 71|{ \color{green} 7 } \to \;\; \;\; 71
+   \div 8 = 8.875; \qquad rem = { 0.875 \times 8 = \color{green} 7 } \\ \quad
+   \;\;8|{ \color{green} 0 } \to \;\; \quad 8 \div 8 = 1; \qquad \qquad rem = {
+   0.0 \times 8 = \color{green} 0 } \\ \quad \;\;1|{ \color{green} 1 } \to
+   \quad\;\; 1 \div 8 = \ \cdots; \quad \qquad rem = \cdots = { \color{green} 1
+   }; MSD\text{(most right digit)} \\ 4563_{(10)} = { \color{pink} 10723_{(8)}
+   }$
 
    $0.419_{(10)} \to \\ \;{ \color{green} . }|419 \to 0.419 \times 8 = {
    \color{green} 3 }.352; \\ { \color{green} 3 }|352 \to 0.352 \times 8 = {
@@ -411,8 +411,8 @@
   1(2^5) + 0(2^4) + 1(2^3) + 1(2^2) + 0(2^1) + 0(2^0) \\ = 654_{(8)} = {
   \color{green} 110101100_{(2)} }$
 
-- Every octal digit corresponds to a group of three binary digits: $\\ 0_{(8)}
-  = 000_{(2)} \qquad 4_{(8)} = 100_{(2)} \\ 1_{(8)} = 001_{(2)} \qquad 5_{(8)} =
+- Every octal digit corresponds to a group of three binary digits: $\\ 0_{(8)} =
+  000_{(2)} \qquad 4_{(8)} = 100_{(2)} \\ 1_{(8)} = 001_{(2)} \qquad 5_{(8)} =
   101_{(2)} \\ 2_{(8)} = 010_{(2)} \qquad 6_{(8)} = 110_{(2)} \\ 3_{(8)} =
   011_{(2)} \qquad 7_{(8)} = 111_{(2)} \\$
 
@@ -433,7 +433,7 @@
    $3745_{(8)} \to$
 
    | $3_{(8)}$   | $7_{(8)}$   | $4_{(8)}$   | $5_{(8)}$   |
-   | ------------- | ------------- | ------------- | ------------- |
+   | ----------- | ----------- | ----------- | ----------- |
    | $011_{(2)}$ | $111_{(2)}$ | $100_{(2)}$ | $101_{(2)}$ |
 
    $= {\color{gray}0}11111100101_{(2)}$
@@ -452,7 +452,7 @@
    $0.6637_{(8)} \to$
 
    | $0.6_{(8)}$   | $6_{(8)}$   | $3_{(8)}$   | $7_{(8)}$   |
-   | --------------- | ------------- | ------------- | ------------- |
+   | ------------- | ----------- | ----------- | ----------- |
    | $0.110_{(2)}$ | $110_{(2)}$ | $011_{(2)}$ | $111_{(2)}$ |
 
    $= 0.110110011111_{(2)}$
@@ -471,8 +471,8 @@
    $5703.3421_{(8)} \to$
 
    | $5_{(8)}$   | $7_{(8)}$   | $0_{(8)}$   | $3_{(8)}$   | $\cdot$ | $3_{(8)}$   | $4_{(8)}$   | $2_{(8)}$   | $1_{(8)}$   |
-   | ------------- | ------------- | ------------- | ------------- | --------- | ------------- | ------------- | ------------- | ------------- |
-   | $101_{(2)}$ | $111_{(2)}$ | $000_{(2)}$ | $011_{(2)}$ |\cdot$ | $011_{(2)}$ | $100_{(2)}$ | $010_{(2)}$ | $001_{(2)}$ |
+   | ----------- | ----------- | ----------- | ----------- | ------- | ----------- | ----------- | ----------- | ----------- |
+   | $101_{(2)}$ | $111_{(2)}$ | $000_{(2)}$ | $011_{(2)}$ | \cdot$  | $011_{(2)}$ | $100_{(2)}$ | $010_{(2)}$ | $001_{(2)}$ |
 
    $= 101111000011.011100010001_{(2)}$
    <h3>
@@ -490,8 +490,8 @@
    $53014.06573_{(8)} \to$
 
    | $5_{(8)}$   | $3_{(8)}$   | $0_{(8)}$   | $1_{(8)}$   | $4_{(8)}$   | $\cdot$ | $0_{(8)}$   | $6_{(8)}$   | $5_{(8)}$   | $7_{(8)}$   | $3_{(8)}$   |
-   | ------------- | ------------- | ------------- | ------------- | ------------- | --------- | ------------- | ------------- | ------------- | ------------- | ------------- |
-   | $101_{(2)}$ | $011_{(2)}$ | $000_{(2)}$ | $001_{(2)}$ | $100_{(2)}$ | $\cdot$| $000_{(2)}$ | $110_{(2)}$ | $101_{(2)}$ | $111_{(2)}$ | $011_{(2)}$ |
+   | ----------- | ----------- | ----------- | ----------- | ----------- | ------- | ----------- | ----------- | ----------- | ----------- | ----------- |
+   | $101_{(2)}$ | $011_{(2)}$ | $000_{(2)}$ | $001_{(2)}$ | $100_{(2)}$ | $\cdot$ | $000_{(2)}$ | $110_{(2)}$ | $101_{(2)}$ | $111_{(2)}$ | $011_{(2)}$ |
 
    $= 101011000001100.000110101111011_{(2)}$
    <h3>
@@ -511,7 +511,7 @@
    $101011100011_{(2)} \to$
 
    | $101_{(2)}$ | $011_{(2)}$ | $100_{(2)}$ | $011_{(2)}$ |
-   | ------------- | ------------- | ------------- | ------------- |
+   | ----------- | ----------- | ----------- | ----------- |
    | $5_{(8)}$   | $3_{(8)}$   | $4_{(8)}$   | $3_{(8)}$   |
 
    $= 5343_{(8)}$
@@ -530,7 +530,7 @@
    $0.110110011_{(2)} \to$
 
    | $0.110_{(2)}$ | $110_{(2)}$ | $011_{(2)}$ |
-   | --------------- | ------------- | ------------- |
+   | ------------- | ----------- | ----------- |
    | $0.6_{(8)}$   | $6_{(8)}$   | $3_{(8)}$   |
 
    $= 0.663_{(8)}$
@@ -549,7 +549,7 @@
    $11011011.1011101_{(2)} \to$
 
    | ${\color{gray}0}11_{(2)}$ | $011_{(2)}$ | $011_{(2)}$ | $\cdot$ | $101_{(2)}$ | $110_{(2)}$ | $1{\color{gray}00}_{(2)}$ |
-   | --------------------------- | ------------- | ------------- | --------- | ------------- | ------------- | --------------------------- |
+   | ------------------------- | ----------- | ----------- | ------- | ----------- | ----------- | ------------------------- |
    | $3_{(8)}$                 | $3_{(8)}$   | $3_{(8)}$   | $\cdot$ | $5_{(8)}$   | $6_{(8)}$   | $4_{(8)}$                 |
 
    $= 333.564_{(8)}$
@@ -568,7 +568,7 @@
    $1001011011.10111011001_{(2)} \to$
 
    | ${\color{gray}00}1_{(2)}$ | $001_{(2)}$ | $011_{(2)}$ | $011_{(2)}$ | $\cdot$ | $101_{(2)}$ | $110_{(2)}$ | $110_{(2)}$ | $01{\color{gray}0}_{(2)}$ |
-   | --------------------------- | ------------- | ------------- | ------------- | --------- | ------------- | ------------- | ------------- | --------------------------- |
+   | ------------------------- | ----------- | ----------- | ----------- | ------- | ----------- | ----------- | ----------- | ------------------------- |
    | $1_{(8)}$                 | $1_{(8)}$   | $3_{(8)}$   | $3_{(8)}$   | $\cdot$ | $5_{(8)}$   | $6_{(8)}$   | $6_{(8)}$   | $2_{(8)}$                 |
 
    $= 1133.5662_{(8)}$
