--- a/modules/5.md
+++ b/modules/5.md
@@ -12,7 +12,8 @@
 # 1.5 HEXADECIMAL NUMBER SYSTEM
 
 - A number system with a base (radix) $16$ is called Hexadecimal Number System
-  and uses the following digits $0, 1, 2, 3, 4, 5, 6, 7, 8, 9$ and letters $A, B, C, D, E, F$.
+  and uses the following digits $0, 1, 2, 3, 4, 5, 6, 7, 8, 9$ and letters $A,
+  B, C, D, E, F$.
 - When the number is given in an Hexadecimal Number System, every place of the
   digits letter represents a power of $16$ (or $2^4$).
 
@@ -95,7 +96,8 @@
 - The digit positions to the left of the hexadecimal point represent $16^0,
   16^1, 16^2, 16^3, \cdots$ and the digit positions to the right of the octal
   point represent $16^{-1}, 16^{-2}, 16^{-3}, \cdots$
-- The values of the letters are: $A = 10; B = 11; C = 12; D = 13; E = 14; F = 15$
+- The values of the letters are: $A = 10; B = 11; C = 12; D = 13; E = 14; F =
+  15$
 - The positional values based on powers of $16$ are then evaluated (as in the
   Decimal Number System) to obtain the equivalent decimal number.
 - For example, $\\ B0393D_{(16)} \to \\ = B(16^5) + 0(16^4) + 3(16^3) +
@@ -106,10 +108,10 @@
 
 - To convert a fractional portion of a decimal number we use successive
   multiplication by $16$.
-- For example, to convert $0.948_{(10)}$ to its hexadecimal equivalent we
-  have: $\\ 0.948 \to \\ \;\;{ \color{green} . }|948 \to 0.948 \times 16 =
-  15.168; (F = 15) \\ { \color{green} F }|168 \to 0.168 \times 16 = 2.688; \\
-  \;{ \color{green} 2 }|688 \to 0.688 \times 16 = 11.008; (B = 11) \\ {
+- For example, to convert $0.948_{(10)}$ to its hexadecimal equivalent we have:
+  $\\ 0.948 \to \\ \;\;{ \color{green} . }|948 \to 0.948 \times 16 = 15.168; (F
+  = 15) \\ { \color{green} F }|168 \to 0.168 \times 16 = 2.688; \\ \;{
+  \color{green} 2 }|688 \to 0.688 \times 16 = 11.008; (B = 11) \\ {
   \color{green} B }|008 \to 0.008 \times 16 = 0.128; \\ \;{ \color{green} 0
   }|128 \to 0.128 \times 16 = 2.048; \\ \;{ \color{green} 2 }|048 \to 0.048
   \times 16 = 0.768; \\ \;{ \color{green} 0 }|048 \to 0.768 \times 16 = \cdots
@@ -172,7 +174,8 @@
     <hr />
 
 4. $0.647_{(10)}$
-   <input type="number" style="background-color:#0F1217;color:white;"> $_{(16)}$ (to $6$ places after the fractional point)
+   <input type="number" style="background-color:#0F1217;color:white;"> $_{(16)}$
+   (to $6$ places after the fractional point)
    <details>
    <summary style="color: green;">See Answer Q4</summary>
 
@@ -193,7 +196,8 @@
 
 ## 1.5.3 CONVERTING BETWEEN HEXADECIMAL AND BINARY NUMBER SYSTEM
 
-- The Hexadecimal Number System has a base 16 which is also a power of $2, (2^4)$.
+- The Hexadecimal Number System has a base 16 which is also a power of $2,
+  (2^4)$.
 - This means that the hexadecimal and the binary numbers "align" at every forth
   position.
 - Consider the following example: $100111011011_{(2)}$
@@ -239,7 +243,7 @@
 - For example, $\\ A894DC_{(16)} \to$
 
   | $A$    | $8$    | $9$    | $4$    | $D$    | $C$    |
-  | -------- | -------- | -------- | -------- | -------- | -------- |
+  | ------ | ------ | ------ | ------ | ------ | ------ |
   | $1010$ | $1000$ | $1001$ | $0101$ | $1101$ | $1100$ |
 
   ${ \color{green} = 1010 1000 1001 0101 1101 1100_{(2)} }$
@@ -251,14 +255,14 @@
 - For example, $\\ B793EC_{(16)} \to$
 
   | $B$    | $7$    | $9$    | $3$    | $E$    | $C$    |
-  | -------- | -------- | -------- | -------- | -------- | -------- |
+  | ------ | ------ | ------ | ------ | ------ | ------ |
   | $1011$ | $0111$ | $1001$ | $0011$ | $1110$ | $1100$ |
 
   $= { \color{lightgreen} 101 101 111 001 001 111 101 100_{(2)} } \to$
 
   | $101$ | $101$ | $111$ | $001$ | $001$ | $111$ | $101$ | $100$ |
-  | ------- | ------- | ------- | ------- | ------- | ------- | ------- | ------- |
-  | $5$   | $5$   | $7$   | $1$   | $1$   |$7$   | $5$   | $4$   |
+  | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- |
+  | $5$   | $5$   | $7$   | $1$   | $1$   | $7$   | $5$   | $4$   |
 
   $B793EC_{(16)} = { \color{green} 55711754_{(8)} }$
 
@@ -282,8 +286,7 @@
 
 2. $0.2DC9_{(16)}$
    <input type="number" style="background-color:#0F1217;color:white;"> $_{(2)};
-   $<input type="number" style="background-color:#0F1217;color:white;">
-   $_{(8)}$
+   $<input type="number" style="background-color:#0F1217;color:white;"> $_{(8)}$
    <details>
    <summary style="color: green;">See Answer Q2</summary>
 
@@ -292,16 +295,15 @@
    0.133444_{(8)};$
    <h3>
 
-   $0.2DC9_{(16)} = { \color{green} 0.0010110111001001_{(2)} } = {
-   \color{green} 0.133444_{(8)} }$
+   $0.2DC9_{(16)} = { \color{green} 0.0010110111001001_{(2)} } = { \color{green}
+   0.133444_{(8)} }$
    </h3>
     </details>
     <hr />
 
 3. $3D6.5E29_{(16)}$
    <input type="number" style="background-color:#0F1217;color:white;"> $_{(2)};
-   $<input type="number" style="background-color:#0F1217;color:white;">
-   $_{(8)}$
+   $<input type="number" style="background-color:#0F1217;color:white;"> $_{(8)}$
 
    <details>
    <summary style="color: green;">See Answer Q3</summary>
@@ -327,8 +329,8 @@
    <details>
    <summary style="color: green;">See Answer Q1</summary>
 
-   $= 6,7,3,7_{(8)}; \\ = 110,111,011,111_{(2)}; \\ = 1101,1101,1111_{(2)}; \\
-   = D,D,F_{(16)};$
+   $= 6,7,3,7_{(8)}; \\ = 110,111,011,111_{(2)}; \\ = 1101,1101,1111_{(2)}; \\ =
+   D,D,F_{(16)};$
    <h3>
 
    $6737_{(8)} = { \color{green} 110111011111_{(2)} } = { \color{green}
