Using KaTex for Syntex; Fix source formatting

--- a/modules/1.md
+++ b/modules/1.md
@@ -1,55 +1,55 @@
-| No.       | Topic                                                                                                         |
-| --------- | ------------------------------------------------------------------------------------------------------------- |
-| 1.1       | [NON POSITIONAL NUMBER SYSTEM](#11-non-positional-number-system)                                              |
-| Example 1 | [Write the following numbers with roman numerals](#example-1-write-the-following-numbers-with-roman-numerals) |
-| Example 2 | [Write the following numerals in decimal form](#example-2-write-the-following-numerals-in-decimal-form)       |
-
 # 1.1 NON POSITIONAL NUMBER SYSTEM
 
-- Digits in a non-positional number system have a same value regardless of their
-  position.
-- An example is Roman Numeral System.
-- The digits used in this number system and their values are:
+Digits in a non-positional number system have a same value regardless of their position.
 
-| DECIMAL | $1$ | $5$ | $10$ | $50$ | $100$ | $500$ | $1000$ |
-| :-----: | :-: | :-: | :--: | :--: | :---: | :---: | :----: |
-|  ROMAN  | $I$ | $V$ | $X$  | $L$  |  $C$  |  $D$  |  $M$   |
+An example is Roman Numeral System. The digits used in this number system and their values are:
 
-- The following rules are satisfied when writing and reading roman numerals:
+   | DECIMAL | $1$ | $5$ | $10$ | $50$ | $100$ | $500$ | $1000$ |
+   | :-----: | :-: | :-: | :--: | :--: | :---: | :---: | :----: |
+   |  ROMAN  | $I$ | $V$ | $X$  | $L$  |  $C$  |  $D$  |  $M$   |
 
-1. Two or three same digits (from $I, X, C, M$) in a row represent the sum of
-   their individual value.
+---
+
+## The following rules are satisfied when writing and reading roman numerals:
+
+Two or three same digits (from $I, X, C, M$) in a row represent the sum of their individual value.
 - $II = 2$
 - $CCC=300$
 - $MMM=3000$
 
-2. Two digits where the smaller one is in front of the bigger represent their
-   difference.
+---
+
+Two digits where the smaller one is in front of the bigger represent their difference.
 - $IV = 4$
 - $IX = 9$
 - $XL=40$
 
-3. Two digits where the smaller one is after the bigger represent their sum.
+---
+
+Two digits where the smaller one is after the bigger represent their sum.
 - $VI = 6$
 - $XI = 11$
 - $LV=55$
 
-4. There can only be put one smaller digit (from $I, X, C$) in front of a
-   bigger; the smaller letter can be one fifth $(1/5)$ or one tenth $(1/10)$ of
-   the larger one;
+---
+
+There can only be put one smaller digit (from $I, X, C$) in front of a bigger; the smaller letter can be one fifth $(1/5)$ or one tenth $(1/10)$ of the larger one;
 - $99$ cannot be $IC$ as $I$ is one hundredth part of $C$.
 - Instead, $99 = XCIX$.
 
-5. There can be $1, 2$ or $3$ same digits that are smaller written after a
-   bigger digit, in which case their value will be added together and added
-   again to the bigger digit.
-- There can only be $CM=900$, but there can be $MCCC=1300$.
+---
 
-6. There cannot be more than one digit written together from the second row of
-   digits above $(V, L, D)$.
-- Within the roman numerals there is no representation of $0 (zero)$.
-- It will be very difficult to perform arithmetic operations within this system,
-  as well as writing larger numbers.
+There can be $1, 2$ or $3$ same digits that are smaller written after a bigger digit, in which case their value will be added together and added again to the bigger digit.
+
+There can only be $CM=900$, but there can be $MCCC=1300$.
+
+---
+
+There cannot be more than one digit written together from the second row of digits above $(V, L, D)$.
+
+Within the roman numerals there is no representation of $0 (zero)$.
+
+It will be very difficult to perform arithmetic operations within this system, as well as writing larger numbers.
 
 ## Example 1: Write the following numbers with roman numerals:
 
